# tiny-utility

./: .gitignore  CMakeLists.txt  README.md  domain_socket_test_client.cpp  domain_socket_test_server.cpp  ip_socket_test_client.cpp  ip_socket_test_server.cpp
domain_socket/: domain_socket.cpp  domain_socket.hpp
ip_socket/: ip_socket.cpp  ip_socket.hpp
keyboard_control/: main.cpp  键位说明.md
socket_module/: CMakeLists.txt  README.md  domain_socket_test_client.cpp  domain_socket_test_server.cpp  socket_message.hpp
socket_module/demo/: domain_socket_test_client.cpp  domain_socket_test_server.cpp  ip_socket_test_client.cpp  ip_socket_test_server.cpp
socket_module/domain_socket/: CMakeLists.txt  domain_socket.cpp  domain_socket.hpp
socket_module/ip_socket/: CMakeLists.txt  ip_socket.cpp
